<resources>
    <string name="app_name">InstaDemo</string>
    <string name="venus">Venus</string>
    <string name="share_pictu">Share picture, anytime, anywhere !</string>
    <string name="login">Log in</string>
    <string name="signUp">Sign up</string>
    <string name="welcome_back">Welcome back</string>
    <string name="log_in_with">Log in with your account</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search...</string>
    <string name="title_activity_comment">CommentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="address">Address</string>
    <string name="fullname">Full Name</string>
    <string name="birthdate">Birth Date</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="view_all_comment">View all comments</string>
    <string name="repassword">Re-Password</string>
    <string name="sigupWithFb">Sign up with Facebook</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>