<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- image 2 -->
    <View
        android:id="@+id/image_2"
        android:layout_width="411dp"
        android:layout_height="540dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="190dp"
        android:background="@drawable/backgroud_image"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_7"
        android:layout_width="411dp"
        android:layout_height="230dp"
        android:background="@drawable/main_background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/txtTitle"
        android:layout_width="112dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/txtDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_7"
        app:layout_constraintVertical_bias="0.617" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="290dp"
        android:layout_height="35dp"
        android:layout_marginTop="75dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="3sp"
        android:text="@string/share_pictu"
        android:textAppearance="@style/share_pictu"
        android:textSize="15sp"
        android:translationY="-1.65sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_7" />

    <Button
        android:id="@+id/btnLogInMain"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_marginStart="37dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_backgroud2"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSignUpMain"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_backgroud"
        android:text="@string/signUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>